[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegramlistener"
version = "0.1.0"
description = "Lightweight Telegram real-time listener with queue-based output."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
	{ name = "Javier Calzada" }
]
dependencies = [
	"telethon>=1.36.0",
	"clean-text>=0.6.0",
	"ulid-py>=1.1.0",
	"python-dotenv>=1.0.1",
	"unidecode>=1.4.0",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.0.0",
	"ruff>=0.6.0",
	"black>=24.0.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["telegramlistener*"]
